--- a/weToast.wxss
+++ b/weToast.wxss
@@ -16,6 +16,17 @@
   border-radius: 10px;
   border: 2px solid #CCC;
   box-shadow: 0px 2px 10px 3px rgba(200,200,200,0.6);
+  display: flex;
+  flex-direction: row;
+}
+.weToast-box-r {
+  flex: 1;
+}
+.weToast-box-l {
+  margin-right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .weToast-title {
   font-size: 16px;
@@ -24,6 +35,11 @@
 }
 .weToast-content {
   font-size: 14px;
-  color: #EEE;
+  color: rgba(255, 255, 255, 0.8);
   line-height: 20px;
+}
+.weToast-icon {
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
 }
