--- a/weToast.wxss
+++ b/weToast.wxss
@@ -13,9 +13,9 @@
   width: 200px;
   background-color: rgba(76, 175, 80, 0.9);
   padding: 10px;
-  border-radius: 10px;
-  border: 2px solid #CCC;
-  box-shadow: 0px 2px 10px 3px rgba(200,200,200,0.6);
+  border-radius: 5px;
+  border: 1px solid #DDD;
+  box-shadow: 0px 2px 10px 3px rgba(200,200,200,0.7);
   display: flex;
   flex-direction: row;
 }
