增加点击隐藏

--- a/weToast.wxml
+++ b/weToast.wxml
@@ -2,7 +2,7 @@
 <view
   class="weToast-container"
   animation="{{ weToastAnimation }}">
-  <view
+  <view bindtap="weToastHideHandler"
     class="weToast-box"
     hover-class="weToast-box-hover"
     style="background-color: {{ weToastBoxBG }}">
