--- a/weToast.wxml
+++ b/weToast.wxml
@@ -1,20 +1,20 @@
 <!--提示卡片模版-->
 <view
   class="weToast-container"
-  animation="{{ weToastAnimation }}">
+  animation="{{ weToast.weToastAnimation }}">
   <view bindtap="weToastHideHandler"
     class="weToast-box"
     hover-class="weToast-box-hover"
-    style="background-color: {{ weToastBoxBG }}">
+    style="background-color: {{ weToast.weToastBoxBG }}">
     <view class="weToast-box-l">
-      <image src="data:image/png;base64,{{ weToastIcon }}" class="weToast-icon"></image>
+      <image src="data:image/png;base64,{{ weToast.weToastIcon }}" class="weToast-icon"></image>
     </view>
 
     <view class="weToast-box-r">
-      <view class="weToast-title" wx:if="{{ !!weToastTitle }}">
-        {{ weToastTitle }}
+      <view class="weToast-title" wx:if="{{ !!weToast.weToastTitle }}">
+        {{ weToast.weToastTitle }}
       </view>
-      <text class="weToast-content">{{ weToastContent }}</text>
+      <text class="weToast-content">{{ weToast.weToastContent }}</text>
     </view>
   </view>
 </view>
