--- a/weToast.wxml
+++ b/weToast.wxml
@@ -5,7 +5,7 @@
   <view bindtap="weToastHideHandler"
     class="weToast-box"
     hover-class="weToast-box-hover"
-    style="background-color: {{ weToast.boxBG }}">
+    style="background-image: {{ weToast.boxBG }}">
     <view class="weToast-box-l">
       <view class="weIcon weIcon-{{ weToast.icon }}-circled weToast-icon" />
     </view>
